# ACUITY-LMS-AI-Teacher

./: .gitignore  API_CONTRACTS.md  ARCHITECTURE.md  BRD_ACUITY_LMS_AI.md  BRD_Implementation_Status.xlsx  DATABASE_SCHEMA.md  IMPLEMENTATION_PLAN.md  Readme.md  docker-compose.yml  generate_status_excel.py  run.md
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  backend_stderr.txt  backend_stdout.txt  docker-compose.yml  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_create_all_tables.py  0002_create_auth_tables.py  0003_add_report_title_and_data.py  0004_add_content_ingestion_tables.py  0005_add_assessment_tables.py  0006_add_teacher_role_tables.py  0007_add_user_verification_fields.py  0008_add_student_linking_codes.py  0009_add_parental_controls_tables.py  0010_add_messaging_moderation_institutional_gamification_payments.py  0011_add_linking_security_improvements.py
Backend/app/: config.py  database.py  main.py
Backend/app/ai/: prompts.py  router.py  state.py
Backend/app/ai/diagnosis/: prompts.py  schemas.py  service.py
Backend/app/ai/evaluation/: datasets.py  harness.py  metrics.py  reports.py  router.py
Backend/app/ai/evaluators/: mastery.py
Backend/app/ai/graphs/: teacher.py
Backend/app/ai/guardrails/: __init__.py  empty_detector.py  (+4 more)
Backend/app/analytics/: __init__.py  router.py  schemas.py  service.py
Backend/app/assessments/: models.py  repository.py  router.py  schemas.py  service.py
Backend/app/audit/: __init__.py  models.py
Backend/app/auth/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
Backend/app/common/: __init__.py  base.py  compat.py  constants.py  exceptions.py  guardrails.py  repository.py  response.py  types.py
Backend/app/content_ingestion/: models.py  prompts.py  repository.py  router.py  schemas.py  service.py
Backend/app/course_admin/: models.py  repository.py  router.py  schemas.py  service.py
Backend/app/curriculum/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/diagnosis/: __init__.py  models.py
Backend/app/enrollment/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/evaluation/: models.py
Backend/app/gamification/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/health/: __init__.py  router.py
Backend/app/infrastructure/: database.py  logging.py
Backend/app/institutional/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/knowledge_graph/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/mastery/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/memory/: __init__.py  models.py
Backend/app/messaging/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/middleware/: __init__.py  csrf.py  rate_limit.py  security_headers.py
Backend/app/moderation/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/monitoring/: __init__.py  metrics.py  middleware.py  models.py  service.py
Backend/app/notifications/: __init__.py  router.py  schemas.py  service.py
Backend/app/pacing/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/parent_dashboard/: repository.py  router.py  schemas.py  service.py
Backend/app/parental_controls/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/payments/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/progress/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/reports/: __init__.py  models.py  prompts.py  router.py  schemas.py  service.py
Backend/app/security/: __init__.py  config.py  jwt.py  password.py
Backend/app/teacher/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
Backend/app/teaching/: __init__.py  models.py
Backend/app/teaching_sessions/: __init__.py  repository.py  router.py  schemas.py  service.py
Backend/app/users/: __init__.py  models.py  repository.py  schemas.py  service.py
Backend/scripts/: init_db.py  seed_data.py
Backend/tests/: conftest.py  test_analytics.py  test_assessments.py  test_auth.py  test_content_ingestion.py  test_curriculum.py  test_diagnosis.py  test_enrollment.py  test_evaluation.py  test_health.py  test_knowledge_graph.py  test_mastery.py  test_memory.py  test_middleware.py  test_pacing.py  test_parent_dashboard.py  test_progress.py  test_rbac.py  test_reports.py  test_teacher.py  test_teacher_graph.py  test_teaching_sessions.py
Backend/tests/integration/: conftest.py  test_analytics_flow.py  test_assessment_flow.py  test_content_ingestion_flow.py  test_diagnosis_flow.py  test_memory_extraction.py  test_parent_report.py  test_teacher_flow.py  test_teaching_flow.py
(+182 files in other folders)
