[project]
name = "acuity-lms-ai"
version = "0.1.0"
description = "AI-Native Personalized Schooling Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-json-logger>=2.0.0",
    "python-multipart>=0.0.18",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0,<5.0.0",
    "langgraph>=0.4.0",
    "google-genai>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
qdrant = [
    "qdrant-client>=1.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["N818", "UP042", "F821"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "B008"]
"alembic/*" = ["E501"]
"app/auth/router.py" = ["B008"]
"app/auth/dependencies.py" = ["B008"]
"app/curriculum/router.py" = ["B008"]
"app/enrollment/router.py" = ["B008"]
"app/knowledge_graph/router.py" = ["B008"]
"app/mastery/router.py" = ["B008"]
"app/pacing/router.py" = ["B008"]
"app/progress/router.py" = ["B008"]
"app/teaching_sessions/router.py" = ["B008"]
"app/ai/router.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
