[project]
name = "acuity-lms-ai"
version = "0.1.0"
description = "AI-Native Personalized Schooling Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-json-logger>=2.0.0",
    "python-multipart>=0.0.18",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0,<5.0.0",
    "langgraph>=0.4.0",
    "google-genai>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
qdrant = [
    "qdrant-client>=1.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["N818", "UP042", "F821"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "B008"]
"alembic/*" = ["E501"]
"app/reports/prompts.py" = ["E501"]
"app/auth/router.py" = ["B008"]
"app/auth/dependencies.py" = ["B008"]
"app/curriculum/router.py" = ["B008"]
"app/enrollment/router.py" = ["B008"]
"app/knowledge_graph/router.py" = ["B008"]
"app/mastery/router.py" = ["B008"]
"app/pacing/router.py" = ["B008"]
"app/progress/router.py" = ["B008"]
"app/teaching_sessions/router.py" = ["B008"]
"app/ai/router.py" = ["B008"]
"app/reports/router.py" = ["B008"]
"app/teacher/router.py" = ["B008"]
"app/parent_dashboard/router.py" = ["B008", "F401"]
"app/notifications/router.py" = ["B008", "F401"]
"app/analytics/router.py" = ["B008"]
"app/assessments/router.py" = ["B008"]
"app/content_ingestion/router.py" = ["B008"]
"app/health/router.py" = ["B008"]
"app/ai/evaluation/router.py" = ["B008", "B904"]
"app/database.py" = ["N812"]
"app/ai/guardrails/*" = ["SIM103", "SIM110", "SIM102"]
"app/ai/prompts/*" = ["E501"]
"app/assessments/service.py" = ["B904", "F841", "E501", "SIM108", "SIM105"]
"app/monitoring/metrics.py" = ["E402"]
"app/progress/service.py" = ["F841"]
"app/parent_dashboard/service.py" = ["E741", "E501"]
"app/parental_controls/models.py" = ["UP037"]
"app/parental_controls/schemas.py" = ["F401"]
"app/parent_dashboard/schemas.py" = ["F401"]
"app/parent_dashboard/repository.py" = ["F401"]
"app/notifications/service.py" = ["F401", "F541"]
"app/monitoring/models.py" = ["F401"]
"app/monitoring/service.py" = ["F401"]
"app/parental_controls/router.py" = ["B008"]
"app/payments/router.py" = ["B008", "E501"]
"app/moderation/router.py" = ["B008"]
"app/messaging/router.py" = ["B008"]
"app/institutional/router.py" = ["B008"]
"app/gamification/router.py" = ["B008"]
"app/gamification/models.py" = ["E501"]
"app/gamification/repository.py" = ["E501"]
"app/gamification/service.py" = ["E501"]
"app/institutional/repository.py" = ["E712"]
"app/institutional/service.py" = ["E501"]
"app/messaging/models.py" = ["E501"]
"app/messaging/repository.py" = ["E712"]
"app/moderation/models.py" = ["E501"]
"app/moderation/service.py" = ["E501"]
"app/payments/models.py" = ["E501"]
"app/payments/repository.py" = ["E712"]
"app/payments/service.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
